<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/add_32"
        android:layout_weight="1"
        android:onClick="add32ByteBlocks" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/free_32"
        android:layout_weight="1"
        android:onClick="free32ByteBlocks" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/add_2m"
        android:layout_weight="1"
        android:onClick="add2MByteBlocks" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/free_2m"
        android:layout_weight="1"
        android:onClick="free2MByteBlocks" />
    </LinearLayout>

    <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/blockSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center" >

        <RadioButton
        android:id="@+id/radio17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_17byte"
        android:checked="true" />

        <RadioButton
        android:id="@+id/radio71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_71byte" />
    </RadioGroup>
    </LinearLayout>

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/add_variable"
        android:layout_weight="1"
        android:onClick="addVariableSizedBlocks" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/free_variable"
        android:layout_weight="1"
        android:onClick="freeVariableSizedBlocks" />
    </LinearLayout>
</LinearLayout>
